# ACIPS-SchoolAgent-Registration

./: .gitignore  README.md  README.school-agent.md  install-windows.ps1  requirements.txt  start-windows.ps1
school-agent-prototype/: README.md  README.school-agent.md  manage-certs.sh  pyproject.toml  run.sh
school-agent-prototype/leader/: README.md
school-agent-prototype/leader/assistant/: config.py
school-agent-prototype/leader/assistant/api/: routes.py  schemas.py
school-agent-prototype/leader/assistant/core/: aggregator.py  background_executor.py  completion_gate.py  completion_gate_handler.py  executor.py  history_compressor.py  intent_analyzer.py  orchestrator.py  planner.py  task_execution_manager.py
school-agent-prototype/leader/assistant/llm/: client.py
school-agent-prototype/leader/assistant/models/: aip.py  base.py  exceptions.py  input_routing.py  partner.py  task.py
school-agent-prototype/leader/atr/: 1.2.156.3088.0001.00001.SC64YN.Z5LSGY.1.0NMQ.key  1.2.156.3088.0001.00001.SC64YN.Z5LSGY.1.0NMQ.pem  acs.json
school-agent-prototype/leader/scenario/base/: prompts.toml
school-agent-prototype/leader/tests/e2e/: pytest.ini  test_api_contract.py  test_edge_cases.py  test_user_journey.py
school-agent-prototype/leader/tests/integration/: conftest.py  (+9 more)
school-agent-prototype/partners/: README.md  generic_runner.py  group_handler.py  main.py
school-agent-prototype/partners/tests/: README.md  __init__.py
school-agent-prototype/scripts/: install-windows.ps1  start-windows.ps1
school-agent-prototype/web_app/: README.md  app.js  webserver.py
(+130 files in other folders)
