[project]
name = "acps-demo-apps"
version = "2.0.0"
description = "ACPs 架构示例应用 - 多 Agent 协同"
authors = [{ name = "Team", email = "team@ioa.pub" }]
readme = "README.md"
license = "MulanPSL-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "python-multipart>=0.0.6",
    "requests>=2.28.0",
    "tiktoken>=0.5.0",
    "httpx>=0.24.0",
    "httpx-sse>=0.4.0",
    "sse-starlette>=2.1.3",
    "aio-pika>=9.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Poetry 专有配置：本地路径依赖 & 非打包模式
[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
acps-sdk = { path = "../ACPs-SDK", develop = true }
